--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -29,6 +29,7 @@ body {
 	--black: #000;
 	--grey: #40434e;
 	--purple: #764ba2;
+	--green: #3edb58;
 	--purple-alt: #667eea;
 	// background
 	--background-base: #fff;
