--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,6 +1,20 @@
 // ===============================================================
 //  VARIABLES
 // ===============================================================
+// Color
+$white: #fff;
+$black: #000;
+$grey: #40434e;
+$purple: #764ba2;
+$green: #3edb58;
+$purple-alt: #667eea;
+
+// background
+$background-base: #fff;
+$background: #f1f1f1;
+// color
+$color: #000;
+$color-head: #000;
 
 // Typography
 $base-font-mobile: 47.5%;
