added click animation 🎨

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -24,6 +24,10 @@ body {
 	overflow-x: hidden;
 }
 
+::selection {
+	background-color: $green;
+}
+
 svg {
 	position: relative;
 	vertical-align: middle;
