added colors and fixed disposition of cursor on scroll ✨

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -5,9 +5,8 @@
 $white: #fff;
 $black: #000;
 $grey: #40434e;
-$purple: #764ba2;
-$green: #3edb58;
-$purple-alt: #667eea;
+$pink: #f0f;
+$green: #0fc;
 
 // background
 $background-base: #fff;
