--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -20,7 +20,7 @@ body {
 	margin: 0;
 	background-color: $background;
 	color: $color;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 
 ::selection {
