slider fix and cases detail ✨

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -1,3 +1,12 @@
+:root {
+	// background
+	--background-base: #fff;
+	--background: #f1f1f1;
+	// color
+	--color: #000;
+	--color-head: #000;
+}
+
 * {
 	font-family: $font-base;
 }
