--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -20,8 +20,8 @@ $base-font-mobile: 47.5%;
 $base-font-tablet: 52.5%;
 $base-font-laptop: 62.5%; // 1rem = ~10px
 
-$font-base: 'Roboto', sans-serif;
-$font-head: 'Roboto', sans-serif;
+$font-base: sans-serif;
+$font-head: 'Playfair Display', serif;
 
 $font-s: 1.6rem;
 $font: 1.8rem;
@@ -29,7 +29,7 @@ $font-m: 2rem;
 $font-l: 2.2rem;
 $font-xl: 2.4rem;
 $font-xxl: 3.2rem;
-$font-title: 4.7rem;
+$font-title: 7.8rem;
 
 // Spacing
 $spacing: 2.4rem; // 2.4rem = ~24px
