--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -30,3 +30,13 @@
 	word-break: break-word;
 	hyphens: auto;
 }
+
+@mixin stripes {
+	background-image: repeating-linear-gradient(
+		45deg,
+		rgba(0, 0, 0, 0),
+		rgba(0, 0, 0, 0.15) 0.4px,
+		rgba(0, 0, 0, 0) 2px,
+		rgba(0, 0, 0, 0) 5px
+	);
+}
