--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -34,6 +34,7 @@ h6 {
 
 p,
 li {
-	font-size: $font-s;
-	line-height: $font-s * 1.3;
+	font-size: $font;
+	line-height: 1.8;
+	font-weight: 100;
 }
