--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,34 +7,41 @@ $black: #000;
 $grey: #40434e;
 $light-grey: #c5c5c5;
 $pink: #ea40f7;
-$green: #0fc;
+$green: #00ffc9;
+$red: #be0000;
 
 // background
 $background-base: #fff;
 $background: #f1f1f1;
+$background-dark: #1d1d1c;
 // color
-$color: #000;
-$color-head: #000;
+$color: #191919;
+$color-light: $white;
+$color-head: #1d1d1c;
 
 // Typography
-$base-font-mobile: 47.5%;
+$base-font-mobile: 52.5%;
 $base-font-tablet: 52.5%;
 $base-font-laptop: 62.5%; // 1rem = ~10px
 
-$font-base: sans-serif;
+$font-base: 'DM Sans', sans-serif;
+$font-highlight: 'Benton Sans Wd Bd', sans-serif;
+$font-highlight-light: 'Benton Sans Wd', sans-serif;
 $font-head: 'Playfair Display', serif;
 
-$font-s: 1.6rem;
+$font-s: 1.4rem;
 $font: 1.8rem;
 $font-m: 2rem;
 $font-l: 2.2rem;
-$font-xl: 3.2rem;
+$font-xl: 3rem;
 $font-xxl: 4.2rem;
 $font-title: 7.8rem;
 
 // Spacing
 $spacing: 2.4rem; // 2.4rem = ~24px
 $content-width: 67rem;
+
+$max-widht: $content-width * 1.78;
 
 // Breakpoints
 $s: 576px;
