--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -23,6 +23,11 @@ html {
 	@media all and (min-width: $xl) {
 		font-size: $base-font-laptop;
 	}
+
+	// desktop and up
+	@media all and (min-width: $desktop) {
+		font-size: $base-font-desktop;
+	}
 }
 
 body {
@@ -73,5 +78,168 @@ iframe {
 	&:hover,
 	&:focus {
 		background-color: $pink;
+	}
+}
+
+.light-leave-active,
+.light-enter-active,
+.white-leave-active,
+.white-enter-active,
+.dark-leave-active,
+.dark-enter-active,
+.green-leave-active,
+.green-enter-active {
+	transition: all 0.6s;
+
+	&::before {
+		transition: transform 0.5s $gom;
+	}
+
+	> * > * {
+		transition: transform 0.6s $gom;
+	}
+
+	.intro-enter-active {
+		animation: none;
+	}
+}
+
+// start stage
+.light-leave {
+	&::before {
+		@include transitionBefore(100%, $background);
+	}
+}
+
+// mid stage
+.light-leave-to {
+	&::before {
+		@include transitionBefore(0%, $background);
+	}
+}
+
+.light-enter {
+	&::before {
+		@include transitionBefore(0%, $background);
+	}
+
+	> * > * {
+		transform: translate3d(0, 100%, 0);
+	}
+}
+
+// end stage
+.light-enter-to {
+	&::before {
+		@include transitionBefore(-100%, $background);
+	}
+
+	> * > * {
+		transform: translate3d(0, 0, 0);
+	}
+}
+
+// start stage
+.white-leave {
+	&::before {
+		@include transitionBefore(100%, $white);
+	}
+}
+
+// mid stage
+.white-leave-to {
+	&::before {
+		@include transitionBefore(0%, $white);
+	}
+}
+
+.white-enter {
+	&::before {
+		@include transitionBefore(0%, $white);
+	}
+
+	> * > * {
+		transform: translate3d(0, 100%, 0);
+	}
+}
+
+// end stage
+.white-enter-to {
+	&::before {
+		@include transitionBefore(-100%, $white);
+	}
+
+	> * > * {
+		transform: translate3d(0, 0, 0);
+	}
+}
+
+// start stage
+.dark-leave {
+	&::before {
+		@include transitionBefore(100%, $background-dark);
+	}
+}
+
+// mid stage
+.dark-leave-to {
+	&::before {
+		@include transitionBefore(0%, $background-dark);
+	}
+}
+
+.dark-enter {
+	&::before {
+		@include transitionBefore(0%, $background-dark);
+	}
+
+	> * > * {
+		transform: translate3d(0, 100%, 0);
+	}
+}
+
+// end stage
+.dark-enter-to {
+	&::before {
+		@include transitionBefore(-100%, $background-dark);
+	}
+
+	> * > * {
+		transform: translate3d(0, 0, 0);
+	}
+}
+
+// start stage
+.green-leave {
+	&::before {
+		@include transitionBefore(100%, $green);
+	}
+}
+
+// mid stage
+.green-leave-to {
+	&::before {
+		@include transitionBefore(0%, $green);
+	}
+}
+
+.green-enter {
+	&::before {
+		@include transitionBefore(0%, $green);
+	}
+
+	> * > * {
+		transform: translate3d(0, 100%, 0);
+	}
+}
+
+// end stage
+.green-enter-to {
+	&::before {
+		@include transitionBefore(-100%, $green);
+	}
+
+	> * > * {
+		transform: translate3d(0, 0, 0);
 	}
 }
