--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -2,6 +2,8 @@
 //  TYPOGRAPHY
 // ===============================================================
 
+@include font-family();
+
 h1,
 h2,
 h3,
@@ -40,6 +42,10 @@ li {
 	letter-spacing: 0.01em;
 }
 
+a {
+	text-decoration: none;
+}
+
 .rich-text {
 	h1,
 	h2,
@@ -50,47 +56,39 @@ li {
 		margin-top: 0.6em;
 	}
 
-	ul {
+	ul,
+	ol {
 		list-style: none;
+		padding-top: 0.6em;
 		padding-bottom: 0.6em;
+	}
 
-		li {
-			position: relative;
-			padding-bottom: 0.3em;
+	li {
+		position: relative;
+		padding-bottom: 0.3em;
 
-			&::before {
-				content: '-';
-				position: absolute;
-				display: inline-block;
-				color: $pink;
-				font-weight: 900;
-				transform: translateX(-2em);
-			}
+		&::before {
+			content: '-';
+			position: absolute;
+			display: inline-block;
+			color: $pink;
+			font-weight: 900;
+			transform: translateX(-2em);
 		}
 	}
 
 	ol {
-		list-style: none;
-		padding-bottom: 0.6em;
-
 		li {
-			position: relative;
-			padding-bottom: 0.3em;
 			counter-increment: counter;
 
 			&::before {
 				content: counter(counter) '.';
-				position: absolute;
-				display: inline-block;
-				color: $pink;
-				font-weight: 900;
-				transform: translateX(-2em);
 			}
 		}
 	}
 
 	pre {
-		font-size: $font * 1.5;
+		font-size: $font * 1.3;
 		font-family: $font-highlight-light;
 		color: lighten($color, 20%);
 		white-space: pre-wrap;
@@ -104,7 +102,6 @@ li {
 		font-size: $font;
 		font-weight: 400;
 		letter-spacing: 0.07em;
-		text-decoration: none;
 		position: relative;
 		transition: 0.4s;
 
@@ -130,5 +127,11 @@ li {
 
 	iframe {
 		min-height: 60rem;
+	}
+
+	.block-img img {
+		width: auto;
+		height: auto;
+		max-width: 100%;
 	}
 }
